# python-sense-emu

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.rst  flake.nix  setup.cfg  setup.py
debian/: changelog  control  copyright  py3dist-overrides  pydist-overrides  python-gpiozero-doc.doc-base  rules  sense-emu-tools.install  sense-emu-tools.manpages  sense_emu_gui.desktop
debian/source/: include-binaries
docs/: Makefile  api.rst  bug_simple.py  changelog.rst  conf.py  examples.rst  humidity.py  index.rst  install.rst  license.rst  rainbow.py  sense_csv.rst  sense_emu_gui.rst  sense_play.rst  sense_rec.rst
docs/_static/: style_override.css
icons/: Makefile
icons/xpm/: sense_emu_gui.xpm
sense_emu/: RTIMU.py  __init__.py  app_menu.xml  common.py  compat.py  configparser.py  dump.py  gschemas.compiled  gui.glade  gui.py  humidity.py  i18n.py  imu.py  lock.py  main_window.ui  menu.ui  org.raspberrypi.sense_emu_gui.gschema.xml  play.py  prefs_dialog.ui  pressure.py  record.py  screen.py  sense_emu_gui.glade  sense_emu_gui.ui  sense_emu_menu.glade  sense_hat.py  stick.py  terminal.py  vector.py
sense_emu/examples/: bar_graph.py  joystick.py  joystick_loop.py  plumb_line.py  rainbow.py
sense_emu/examples/advanced/: joystick_events.py  sensor_menu.py
sense_emu/examples/basic/: humidity.py  temperature.py
sense_emu/locale/: README  en_US.po  sense-emu.pot
sense_emu/translations/: sense-emu.pot  sense_emu.pot
